# photography-app-new-app-

./: .gitignore  ADMIN_APP_NAVIGATION_REDESIGN.md  ADMIN_APP_REDESIGN_COMPLETE.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DIAGNOSTIC_REPORT.md  FEATURE_IMPLEMENTATION_SUMMARY.md  PHASED_TASK_PLAN.md  PHOTO_ACCESS_EDITOR_MASTER_SPEC.md  README.md  SESSION_SUMMARY.md  SUPER_ADMIN_FEATURES_SPEC.md  SUPER_ADMIN_IMPLEMENTATION_PLAN.md  TASK_TRACKER.md  UI_MODERNIZATION_ANALYSIS.md  UNASSIGNED_USERS_SECURITY_IMPLEMENTATION_SUMMARY.md  UPGRADE_PLAN.md  UPLOAD_FEATURES_ANALYSIS.md  UPLOAD_SYSTEM_COMPREHENSIVE_FIX.md  admin_and_backend_optimizations.md  app.config.js  app.json  check_tables.sql  comprehensive_audit_and_migration_roadmap.md  eas.json  eslint.config.js  global.d.ts  implementation_plan.md  implementation_plany  index.html  metro.config.js  monetization_and_platform_plan.md  package-lock.json  package.json  remediate-dev-env.ps1  screen_upgrades_suggestions.md  task.md  tsconfig.json
__tests__/: admin-change-password.test.tsx  admin-gallery-pagination.test.tsx  compilation-fixes.test.tsx  rls-uploads.test.ts  splash.test.tsx  tabs-screens.test.tsx
app/: _layout.tsx  admin-login.tsx  debug-oauth.tsx  forgot-password.tsx  index.tsx  login.tsx  notifications.tsx  onboarding.tsx  payment-success.tsx  security-setup.tsx  signup.tsx
app/(admin)/: _layout.tsx  bts-announcements.tsx  calendar.tsx  more.tsx  referrals.tsx  reviews.tsx  sms-history.tsx  social.tsx  upload.tsx
app/(tabs)/: _layout.tsx
app/admin/: change-password.tsx
app/announcements/: [id].tsx  _layout.tsx  all.tsx  index.tsx
app/auth/: callback.tsx
app/bts/: [id].tsx  all.tsx
components/: FeedPostCard.tsx  PaymentModal.tsx  ProfileEditModal.tsx
constants/: colors.ts
contexts/: AuthContext.tsx  BrandingContext.tsx
lib/: adminDatabase.ts  signup.ts  supabase.ts
mocks/: data.ts
modules/local-sms-gateway/: package.json
photo_access_editor/: README.md
photo_access_editor/services/: Cargo.toml
photo_access_editor/services/ai_engine/: Cargo.toml
photo_access_editor/services/ai_engine/src/: cull.rs  enhance.rs  face.rs  inference.rs  lib.rs  mask.rs  upscale.rs
photo_access_editor/services/catalog_engine/: Cargo.toml
photo_access_editor/services/catalog_engine/src/: database.rs  lib.rs  models.rs  repository.rs
photo_access_editor/services/export_engine/: Cargo.toml
photo_access_editor/services/export_engine/src/: exporter.rs  lib.rs  profiles.rs
photo_access_editor/services/mask_engine/: Cargo.toml
photo_access_editor/services/mask_engine/src/: lib.rs
photo_access_editor/services/photo_access_bridge/: Cargo.toml  flutter_rust_bridge.yaml
photo_access_editor/services/photo_access_bridge/src/: frb_generated.rs
photo_access_editor/services/photo_access_bridge/src/api/: ai.rs  editing.rs  export.rs  mod.rs  photo_decoding.rs
photo_access_editor/services/raw_engine/: Cargo.toml
photo_access_editor/services/raw_engine/src/: decoder.rs  lib.rs  metadata.rs  thumbnail.rs
photo_access_editor/services/render_engine/: Cargo.toml
photo_access_editor/services/render_engine/src/: adjustments.rs  compositor.rs  edit_graph.rs  lib.rs  preview.rs
photo_access_editor/services/retouch_engine/: Cargo.toml
photo_access_editor/services/retouch_engine/src/: lib.rs
photographer-dashboard/: AUDIT-REPORT.md  package-lock.json  package.json  tailwind.config.ts
scripts/: create_admin.js  start-tunnel-retry.js  test-ussd.js
services/: admin.ts  client.ts  sms.ts
split-apps/: MPESA_GATEWAY_IMPLEMENTATION_PLAN.md  PHASE_FIXES.sql  TEST_VERIFICATION_CHECKLIST.md
supabase/: config.toml  fix_signup_trigger.sql  schema.sql
super-admin-dashboard/: .gitignore  package-lock.json  package.json  tailwind.config.ts
types/: assignment.ts  content.ts  security.ts  supabase.ts
web-landing/: join.html
web-onboarding/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts
(+686 files in other folders)
