[workspace]
members = [
    "raw_engine",
    "render_engine",
    "catalog_engine",
    "mask_engine",
    "retouch_engine",
    "export_engine",
    "photo_access_bridge",
    "ai_engine",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
image = "0.25"
log = "0.4"
env_logger = "0.11"
rawloader = "0.37"
exif = { package = "kamadak-exif", version = "0.5" }
